@@ -5,7 +5,6 @@ import org.example.websitetechworld.Dto.Request.AdminRequest.SanPhamAdminRequest
 import org.example.websitetechworld.Dto.Request.AdminRequest.SanPhamAdminRequest.NhaCungCapQuickCreateAdminRequest;
 import org.example.websitetechworld.Dto.Response.AdminResponse.SanPhamAdminResponse.NhaCungCapAdminResponse;
 import org.example.websitetechworld.Entity.NhaCungCap;
-import org.example.websitetechworld.Entity.Pin;
 import org.example.websitetechworld.Repository.NhaCungCapRepository;
 import org.example.websitetechworld.exception.ResourceNotFoundException;
 import org.modelmapper.ModelMapper;
@@ -13,9 +12,9 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,10 +27,9 @@ public class NhaCungCapAdminService {
     }
 
     private List<NhaCungCapAdminResponse> convertList(List<NhaCungCap> nhaCungCaps) {
-        return nhaCungCaps
-                .stream()
+        return nhaCungCaps.stream()
                 .map(this::convert)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Page<NhaCungCapAdminResponse> getAllNhaCungCap(Pageable pageable) {
@@ -44,25 +42,46 @@ public class NhaCungCapAdminService {
         return convertList(nhaCungCaps);
     }
 
+    public Page<NhaCungCapAdminResponse> searchNhaCungCap(String search, Pageable pageable) {
+        Page<NhaCungCap> nhaCungCapPage;
+        if (StringUtils.hasText(search)) {
+            nhaCungCapPage = nhaCungCapRepository.findByTenNhaCungCapContainingIgnoreCaseOrEmailContainingIgnoreCase(search, search, pageable);
+        }  else {
+            nhaCungCapPage = nhaCungCapRepository.findAll(pageable);
+        }
+        return nhaCungCapPage.map(this::convert);
+    }
+
     @Transactional
     public NhaCungCapAdminResponse createNCC(NhaCungCapAdminRequest nhaCungCapAdminRequest) {
-        NhaCungCap cungCap = nhaCungCapRepository.save(modelMapper.map(nhaCungCapAdminRequest, NhaCungCap.class));
-        return convert(cungCap);
+        if (nhaCungCapRepository.existsByTenNhaCungCap(nhaCungCapAdminRequest.getTenNhaCungCap())) {
+            throw new IllegalArgumentException("Tên nhà cung cấp đã tồn tại");
+        }
+        NhaCungCap cungCap = modelMapper.map(nhaCungCapAdminRequest, NhaCungCap.class);
+        NhaCungCap saved = nhaCungCapRepository.save(cungCap);
+        return convert(saved);
     }
 
     @Transactional
     public NhaCungCapAdminResponse quickCreateNCC(NhaCungCapQuickCreateAdminRequest req) {
-        NhaCungCap cungCap = nhaCungCapRepository.save(modelMapper.map(req, NhaCungCap.class));
-        return convert(cungCap);
+        if (nhaCungCapRepository.existsByTenNhaCungCap(req.getTenNhaCungCap())) {
+            throw new IllegalArgumentException("Tên nhà cung cấp đã tồn tại");
+        }
+        NhaCungCap cungCap = modelMapper.map(req, NhaCungCap.class);
+        NhaCungCap saved = nhaCungCapRepository.save(cungCap);
+        return convert(saved);
     }
 
     @Transactional
-    public NhaCungCapAdminResponse updateNCC(Integer id, NhaCungCapAdminRequest NhaCungCapAdminRequest) {
+    public NhaCungCapAdminResponse updateNCC(Integer id, NhaCungCapAdminRequest nhaCungCapAdminRequest) {
         NhaCungCap cungCap = nhaCungCapRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy nhà cung cấp ID: " + id));
-        modelMapper.map(NhaCungCapAdminRequest, cungCap);
-        nhaCungCapRepository.save(cungCap);
-        return convert(cungCap);
+        if (nhaCungCapRepository.existsByTenNhaCungCapAndIdNot(nhaCungCapAdminRequest.getTenNhaCungCap(), id)) {
+            throw new IllegalArgumentException("Tên nhà cung cấp đã tồn tại");
+        }
+        modelMapper.map(nhaCungCapAdminRequest, cungCap);
+        NhaCungCap saved = nhaCungCapRepository.save(cungCap);
+        return convert(saved);
     }
 
     @Transactional
@@ -70,13 +89,20 @@ public class NhaCungCapAdminService {
         NhaCungCap nhaCungCap = nhaCungCapRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy nhà cung cấp ID: " + id));
         nhaCungCapRepository.deleteById(id);
-
         return convert(nhaCungCap);
     }
 
     public NhaCungCapAdminResponse detailNCC(Integer id) {
         NhaCungCap cungCap = nhaCungCapRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy nhà cung cấp ID:" + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy nhà cung cấp ID: " + id));
         return convert(cungCap);
+    }
+
+    public boolean existsByTenNhaCungCap(String tenNhaCungCap) {
+        return nhaCungCapRepository.existsByTenNhaCungCap(tenNhaCungCap);
+    }
+
+    public boolean existsByTenNhaCungCapAndIdNot(String tenNhaCungCap, Integer id) {
+        return nhaCungCapRepository.existsByTenNhaCungCapAndIdNot(tenNhaCungCap, id);
     }
 }
